--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,11 +2,17 @@
   font-family: sans-serif;
   text-align: center;
 }
-.MapChart {
-  
+.page {
+  background: rgb(109, 107, 107);
+  height: 100vh
 }
 
 body {
+  margin: 0px auto;
   width: 80vw;
   background: rgb(65, 64, 64);
+}
+
+svg {
+  margin-top: -80px
 }
