--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -15,3 +15,12 @@ body {
   background: rgb(65, 64, 64);
 }
 
+a {
+  color: white;
+  font-size: 1.2rem;
+}
+
+.nav-tabs {
+  background: rgb(65, 64, 64);
+}
+
