--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,8 +1,10 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
+.Details {
+  margin: 0px auto;
+  width: 80%;
+  background: rgb(235, 235, 235); 
+  border-radius: 5px;
+  padding: 10px
 }
-
 
 .page {
   background: rgb(109, 107, 107);
@@ -23,4 +25,5 @@ a {
 .nav-tabs {
   background: rgb(65, 64, 64);
 }
+
 
