--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -34,5 +34,36 @@ a {
   justify-content: center;
 }
 
-#dataTooltip {
+.Stats{
+  display: flex;
+  flex-direction: row ;
+  justify-content: space-around;
+  max-width: 500px;
+}
+
+.SingleStat{
+  font-size: 0.8em;
+  margin: 5px
+}
+
+.SingleStat h5{
+  font-weight: bold;
+  font-size: 1em;
+
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  font-size: 0.8em;
+}
+
+@media screen and (max-width: 700px) {
+  .Stats{
+    flex-direction: column ;
+  }
 }
