--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -9,6 +9,7 @@
 .page {
   background: rgb(109, 107, 107);
   height: 100vh;
+  max-width: 1800px
 }
 
 body {
@@ -38,7 +39,8 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  max-width: 500px;
+  max-width: 800px;
+  align-items: center;
 }
 
 .SingleStat {
@@ -66,12 +68,14 @@ li {
   top: 20%;
   padding: 5%;
   background-color: rgba(180, 180, 180, 0.8);
+  max-width: 1800px
 }
 
 
 @media screen and (max-width: 700px) {
   .Stats {
     flex-direction: column;
+    align-items: flex-start;
   }
   body {
     margin: 0px auto;
@@ -80,6 +84,10 @@ li {
 
   .Details {
     width: 100%
+  }
+  .ScatterPlot{
+    max-width: 250px;
+    overflow: scroll;
   }
 
 }
