--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -72,6 +72,45 @@ li {
 }
 
 
+.close {
+  position: absolute;
+  right: 32px;
+  top: 12px;
+  width: 32px;
+  height: 32px;
+  opacity: 0.3;
+}
+.close:hover {
+  opacity: 1;
+}
+.close:before, .close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 4px;
+  background-color: #333;
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
+}
+
+.close:focus {
+  outline: none
+}
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width: 700px) {
   .Stats {
     flex-direction: column;
